--- a/charts/v1beta1/tenant/templates/secret-store/secretstore-composition.yaml
+++ b/charts/v1beta1/tenant/templates/secret-store/secretstore-composition.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: Composition
 metadata:
-  name: secret-store
+  name: secret-store-ismail
   labels:
-    crossplane.io/xrd: xsecretstores.wadtfy.bmwgroup.net
+    crossplane.io/xrd: xsecretstores.ismail.bmwgroup.net
 spec:
   writeConnectionSecretsToNamespace: crossplane-system
   environment:
@@ -12,17 +12,17 @@ spec:
         ref:
           name: wadtfy-env
   compositeTypeRef:
-    apiVersion: wadtfy.bmwgroup.net/v1beta1
+    apiVersion: ismail.bmwgroup.net/v1beta1
     kind: XSecretStore
   patchSets:
     - name: "k8s-tags"
       patches:
         - fromFieldPath: "spec.awsAccountId"
-          toFieldPath: "spec.forProvider.manifest.metadata.annotations[wadtfy.bmwgroup.net/cluster-account-id]"
+          toFieldPath: "spec.forProvider.manifest.metadata.annotations[ismail.bmwgroup.net/cluster-account-id]"
         - fromFieldPath: "spec.product"
-          toFieldPath: "spec.forProvider.manifest.metadata.annotations[wadtfy.bmwgroup.net/product-name]"
+          toFieldPath: "spec.forProvider.manifest.metadata.annotations[ismail.bmwgroup.net/product-name]"
         - fromFieldPath: "metadata.name"
-          toFieldPath: "spec.forProvider.manifest.metadata.annotations[wadtfy.bmwgroup.net/component-name]"
+          toFieldPath: "spec.forProvider.manifest.metadata.annotations[ismail.bmwgroup.net/component-name]"
   resources:
     - name: SecretStoreIrsa
       base:
@@ -32,15 +32,15 @@ spec:
           deletionPolicy: Delete
           forProvider:
             manifest:
-              apiVersion: wadtfy.bmwgroup.net/v1beta1
+              apiVersion: ismail.bmwgroup.net/v1beta1
               kind: Irsa
               metadata:
                 annotations:
-                  wadtfy.bmwgroup.net/xrd-type: XSecretStore
-                  wadtfy.bmwgroup.net/xrd-version: v1beta1
-                  wadtfy.bmwgroup.net/cluster-account-id:
-                  wadtfy.bmwgroup.net/product-name:
-                  wadtfy.bmwgroup.net/component-name:
+                  ismail.bmwgroup.net/xrd-type: XSecretStore
+                  ismail.bmwgroup.net/xrd-version: v1beta1
+                  ismail.bmwgroup.net/cluster-account-id:
+                  ismail.bmwgroup.net/product-name:
+                  ismail.bmwgroup.net/component-name:
                 name:
                 namespace:
               spec:
@@ -98,11 +98,11 @@ spec:
               kind: SecretStore
               metadata:
                 annotations:
-                  wadtfy.bmwgroup.net/xrd-type: XSecretStore
-                  wadtfy.bmwgroup.net/xrd-version: v1beta1
-                  wadtfy.bmwgroup.net/cluster-account-id:
-                  wadtfy.bmwgroup.net/product-name:
-                  wadtfy.bmwgroup.net/component-name:
+                  ismail.bmwgroup.net/xrd-type: XSecretStore
+                  ismail.bmwgroup.net/xrd-version: v1beta1
+                  ismail.bmwgroup.net/cluster-account-id:
+                  ismail.bmwgroup.net/product-name:
+                  ismail.bmwgroup.net/component-name:
                 name:
                 namespace:
               spec:
