--- a/charts/v1beta1/tenant/Chart.yaml
+++ b/charts/v1beta1/tenant/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 appVersion: "1.1"
 description: Helm chart for installing a custom tenant crossplane xrd.
-name: tenant
+name: tenant-ismail
 version: 1.2.0-v1beta1
 home: https://github.com/DVPE-cloud/wadtfy-custom-components
 keywords:
