--- a/charts/v1beta1/tenant/templates/env-xrd.yaml
+++ b/charts/v1beta1/tenant/templates/env-xrd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xtenantenvs.wadtfy.bmwgroup.net
+  name: xtenantenvs.ismail.bmwgroup.net
 spec:
-  group: wadtfy.bmwgroup.net
+  group: ismail.bmwgroup.net
   names:
     kind: XTenantEnv
     plural: xtenantenvs
