--- a/charts/v1beta1/tenant/templates/tenant-xrd.yaml
+++ b/charts/v1beta1/tenant/templates/tenant-xrd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xtenants.wadtfy.bmwgroup.net
+  name: xtenants.ismail.bmwgroup.net
 spec:
-  group: wadtfy.bmwgroup.net
+  group: ismail.bmwgroup.net
   names:
     kind: XTenant
     plural: xtenants
