chore(fix): corrects StorageClass parameter set
Signed-off-by: Cliff Dornig <cliff.dornig@iteratec.com>

--- a/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-xrd.yaml
+++ b/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-xrd.yaml
@@ -129,6 +129,9 @@ spec:
                 storageClassSecret:
                   type: string
                   description: The ID of the generated StorageClassSecret.
+                mounttargetAvailabilityZone:
+                  type: string
+                  description: The AZ from one of the generated Mounttargets.
                 rbacRoleName:
                   type: string
                   description: The Name of the RBAC Role name.
