--- a/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
+++ b/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
@@ -174,6 +174,15 @@ spec:
               name: tenantfilesystem-mounttargets
               repository: "https://dvpe-cloud.github.io/wadtfy-custom-components/"
               version: 0.2.0-v1beta1
+          # Store the Mounttarget availabilityzone for StorageClass az parameter into a secret
+          connectionDetails:
+            - apiVersion: efs.aws.crossplane.io/v1alpha1
+              kind: MountTarget
+              fieldPath: status.atProvider.availabilityZoneName
+              toConnectionSecretKey: availabilityZoneName
+          writeConnectionSecretToRef:
+            name: mounttargets
+            namespace: crossplane-system
       patches:
         - type: PatchSet
           patchSetName: metadata
@@ -197,6 +206,65 @@ spec:
           toFieldPath: spec.forProvider.values.components.mounttarget.fileSystemIDRef.name
         - fromFieldPath: status.securityGroupName
           toFieldPath: spec.forProvider.values.components.mounttarget.securityGroupRef.name
+        - type: CombineFromComposite
+          combine:
+            variables:
+              - fromFieldPath: "spec.product"
+              - fromFieldPath: "metadata.labels[crossplane.io/claim-namespace]"
+              - fromFieldPath: "metadata.labels[crossplane.io/claim-name]"
+            strategy: string
+            string:
+              fmt: "%s-%s-%s-mt-0"
+          toFieldPath: spec.connectionDetails[0].name
+        - type: CombineFromComposite
+          combine:
+            variables:
+            - fromFieldPath: metadata.name
+            - fromFieldPath: metadata.uid
+            strategy: string
+            string:
+              fmt: mounttargets-%s-%s
+          toFieldPath: spec.writeConnectionSecretToRef.name
+
+    # Get Variables from Helm Release connection secret
+    - name: secret2status
+      base:
+        apiVersion: kubernetes.crossplane.io/v1alpha1
+        kind: Object
+        spec:
+          # Use management policy Observe to observe k8s resource,
+          # but leave to third party to create, update, or delete the resource
+          managementPolicy: Observe
+          forProvider:
+            manifest:
+              apiVersion: v1
+              kind: Secret
+              metadata:
+                namespace: crossplane-system
+          providerConfigRef:
+            name: ""
+      patches:
+        - type: PatchSet
+          patchSetName: "deletionPolicy"
+        - type: PatchSet
+          patchSetName: "providerConfigKubernetes"
+        - type: CombineFromComposite
+          combine:
+            variables:
+            - fromFieldPath: metadata.name
+            - fromFieldPath: metadata.uid
+            strategy: string
+            string:
+              fmt: mounttargets-%s-%s
+          toFieldPath: spec.forProvider.manifest.metadata.name
+        - type: ToCompositeFieldPath
+          fromFieldPath: status.atProvider.manifest.data.availabilityZoneName
+          toFieldPath: status.mounttargetAvailabilityZone
+          transforms:
+            - type: string
+              string:
+                type: Convert
+                convert: FromBase64
 
     # The Key Policy maybe needs to better restrict the access
     - name: aws-kms-key
@@ -682,7 +750,7 @@ spec:
           toFieldPath: "spec.forProvider.manifest.reclaimPolicy"
         - fromFieldPath: "metadata.labels[crossplane.io/claim-namespace]"
           toFieldPath: "spec.forProvider.manifest.metadata.annotations[wadtfy.bmwgroup.net/restricted-namespaces]"
-        - fromFieldPath: "spec.region"
+        - fromFieldPath: "status.mounttargetAvailabilityZone"
           toFieldPath: "spec.forProvider.manifest.parameters.az"
           policy:
             fromFieldPath: Required
