refactor tenant and irsa components to support new secret store naming convention

--- a/charts/v1beta1/tenant/templates/tenant-system-composition.yaml
+++ b/charts/v1beta1/tenant/templates/tenant-system-composition.yaml
@@ -165,3 +165,12 @@ spec:
           toFieldPath: "spec.awsAccountId"
         - fromFieldPath: "spec.namespace"
           toFieldPath: "spec.namespace"
+        - fromFieldPath: "spec.namespace"
+          toFieldPAth: "spec.env.defaultName"
+          transforms:
+            - type: match
+              match:
+                patterns:
+                  - type: regexp
+                    regexp: '.*'
+                    result: secret-store-wadtfy
