--- a/charts/v1beta1/tenant/templates/secret-store/secretstore-xrd.yaml
+++ b/charts/v1beta1/tenant/templates/secret-store/secretstore-xrd.yaml
@@ -30,6 +30,10 @@ spec:
                 namespace:
                   type: string
                   description: "Tenant's specific namespace where to create dependent resources for external secrets."
+                env:
+                  description: "Freeform field to pass values between XRDs"
+                  type: object
+                  x-kubernetes-preserve-unknown-fields: true
               required:
                 - irsaCompositionRef
                 - product
