replaced freeform field with specific variable

--- a/charts/v1beta1/tenant/templates/secret-store/secretstore-composition.yaml
+++ b/charts/v1beta1/tenant/templates/secret-store/secretstore-composition.yaml
@@ -54,7 +54,7 @@ spec:
           patchSetName: "k8s-tags"
         - fromFieldPath: "spec.namespace"
           toFieldPath: "spec.forProvider.manifest.metadata.namespace"
-        - fromFieldPath: "spec.env.defaultName"
+        - fromFieldPath: "spec.defaultName"
           toFieldPath: "spec.forProvider.manifest.metadata.name"
         - fromFieldPath: "spec.irsaCompositionRef"
           toFieldPath: "spec.forProvider.manifest.spec.compositionRef.name"
@@ -120,7 +120,7 @@ spec:
         - type: CombineFromComposite
           combine:
             variables:
-              - fromFieldPath: "spec.env.defaultName"
+              - fromFieldPath: "spec.defaultName"
               - fromFieldPath: "spec.namespace"
             strategy: string
             string:
@@ -129,7 +129,7 @@ spec:
         - type: CombineFromComposite
           combine:
             variables:
-              - fromFieldPath: "spec.env.defaultName"
+              - fromFieldPath: "spec.defaultName"
               - fromFieldPath: "spec.namespace"
             strategy: string
             string:
