--- a/charts/v1beta1/tenant/templates/tenant-system-composition.yaml
+++ b/charts/v1beta1/tenant/templates/tenant-system-composition.yaml
@@ -166,7 +166,7 @@ spec:
         - fromFieldPath: "spec.namespace"
           toFieldPath: "spec.namespace"
         - fromFieldPath: "spec.namespace"
-          toFieldPAth: "spec.env.defaultName"
+          toFieldPAth: "spec.defaultName"
           transforms:
             - type: match
               match:
