--- a/charts/v1beta1/tenant/templates/secret-store/secretstore-xrd.yaml
+++ b/charts/v1beta1/tenant/templates/secret-store/secretstore-xrd.yaml
@@ -30,10 +30,9 @@ spec:
                 namespace:
                   type: string
                   description: "Tenant's specific namespace where to create dependent resources for external secrets."
-                env:
-                  description: "Freeform field to pass values between XRDs"
-                  type: object
-                  x-kubernetes-preserve-unknown-fields: true
+                defaultName:
+                  description: "The default name of the SecretStore resource to be created."
+                  type: sting
               required:
                 - irsaCompositionRef
                 - product
