--- a/charts/v1beta1/tenant/templates/tenant-default-composition.yaml
+++ b/charts/v1beta1/tenant/templates/tenant-default-composition.yaml
@@ -167,7 +167,7 @@ spec:
         - fromFieldPath: "spec.namespace"
           toFieldPath: "spec.namespace"
         - fromFieldPath: "spec.namespace"
-          toFieldPAth: "spec.defaultName"
+          toFieldPath: "spec.defaultName"
           transforms:
             - type: match
               match:
