--- a/charts/v1beta1/tenant/templates/tenant-system-composition.yaml
+++ b/charts/v1beta1/tenant/templates/tenant-system-composition.yaml
@@ -168,9 +168,6 @@ spec:
         - fromFieldPath: "spec.namespace"
           toFieldPath: "spec.defaultName"
           transforms:
-            - type: match
-              match:
-                patterns:
-                  - type: regexp
-                    regexp: '.*'
-                    result: secret-store-wadtfy
+            - type: string
+              string:
+                fmt: "secret-store-wadtfy"
