fixed type in secretstore-xrd

--- a/charts/v1beta1/tenant/templates/secret-store/secretstore-xrd.yaml
+++ b/charts/v1beta1/tenant/templates/secret-store/secretstore-xrd.yaml
@@ -32,7 +32,7 @@ spec:
                   description: "Tenant's specific namespace where to create dependent resources for external secrets."
                 defaultName:
                   description: "The default name of the SecretStore resource to be created."
-                  type: sting
+                  type: string
               required:
                 - irsaCompositionRef
                 - product
