chore: changed DeleteAccessPoint permission to remove PV correctly if PVC gets deleted
Signed-off-by: Cliff Dornig <cliff.dornig@iteratec.com>

--- a/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
+++ b/charts/v1beta1/tenantfilesystem/templates/tenantfilesystem-composition.yaml
@@ -536,6 +536,12 @@ spec:
                         "ec2:DescribeNetworkInterfaces"
                       ],
                       "Resource": "*"
+                    },
+                    {
+                      "Sid" : "Stmt3DeleteAccessPoint",
+                      "Effect": "Allow",
+                      "Action": "elasticfilesystem:DeleteAccessPoint",
+                      "Resource": "*"
                     }
                   ]
                 }
